// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`onLogout() method should get initials given a username 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    activeTab="active"
    currentUser={
      Object {
        "UserInfo": Object {
          "firstName": "David",
          "lastName": "Muhanguzi",
          "picture": "https://test-image.jpg",
        },
      }
    }
    history={
      Object {
        "push": [MockFunction] {
          "calls": Array [
            Array [
              "/login",
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        },
      }
    }
    removeCurrentUser={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="brand"
        >
          <Link
            replace={false}
            to="/"
          >
            <div
              className="header-logo"
            >
              <img
                alt="Andela Logo"
                src="/logo.png"
              />
            </div>
            <span
              className="text"
            >
              ESA
            </span>
          </Link>
        </div>,
        <div
          className="pills"
        >
          <div
            className="nav-links "
          >
            <Link
              replace={false}
              to="/dashboard"
            >
              Dashboard
            </Link>
          </div>
          <div
            className="nav-links "
          >
            <Link
              replace={false}
              to="/"
            >
              Automations
            </Link>
          </div>
          <div
            className="user-info-container"
            data-toggle="signout-dropdown-toggler"
            onClick={[Function]}
          >
            <div
              className="current-user"
              data-toggle="signout-dropdown-toggler"
            >
              <div
                className="user-name"
                data-initials="DM"
                data-name="David Muhanguzi"
                data-toggle="signout-dropdown-toggler"
              />
              <div
                className="image-container"
                data-toggle="signout-dropdown-toggler"
              >
                <img
                  alt="user-icon"
                  className="user-image"
                  data-toggle="signout-dropdown-toggler"
                  src="https://test-image.jpg"
                />
              </div>
            </div>
            <div
              className="caret-down"
              data-toggle="signout-dropdown-toggler"
            >
              <i
                className="fa fa-caret-down"
                data-toggle="signout-dropdown-toggler"
              />
              <div
                className="signout-dropdown-parent"
              >
                <div
                  className="signout-dropdown"
                >
                  <button
                    className="logout-button"
                    onClick={[Function]}
                    type="button"
                  >
                    <i
                      className="fa fa-sign-out-alt"
                    />
                    <span>
                      Sign Out
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>,
      ],
      "id": "header",
    },
    "ref": [Function],
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Link
            replace={false}
            to="/"
          >
            <div
              className="header-logo"
            >
              <img
                alt="Andela Logo"
                src="/logo.png"
              />
            </div>
            <span
              className="text"
            >
              ESA
            </span>
          </Link>,
          "className": "brand",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <div
                className="header-logo"
              >
                <img
                  alt="Andela Logo"
                  src="/logo.png"
                />
              </div>,
              <span
                className="text"
              >
                ESA
              </span>,
            ],
            "replace": false,
            "to": "/",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <img
                  alt="Andela Logo"
                  src="/logo.png"
                />,
                "className": "header-logo",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "alt": "Andela Logo",
                  "src": "/logo.png",
                },
                "ref": null,
                "rendered": null,
                "type": "img",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "ESA",
                "className": "text",
              },
              "ref": null,
              "rendered": "ESA",
              "type": "span",
            },
          ],
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="nav-links "
            >
              <Link
                replace={false}
                to="/dashboard"
              >
                Dashboard
              </Link>
            </div>,
            <div
              className="nav-links "
            >
              <Link
                replace={false}
                to="/"
              >
                Automations
              </Link>
            </div>,
            <div
              className="user-info-container"
              data-toggle="signout-dropdown-toggler"
              onClick={[Function]}
            >
              <div
                className="current-user"
                data-toggle="signout-dropdown-toggler"
              >
                <div
                  className="user-name"
                  data-initials="DM"
                  data-name="David Muhanguzi"
                  data-toggle="signout-dropdown-toggler"
                />
                <div
                  className="image-container"
                  data-toggle="signout-dropdown-toggler"
                >
                  <img
                    alt="user-icon"
                    className="user-image"
                    data-toggle="signout-dropdown-toggler"
                    src="https://test-image.jpg"
                  />
                </div>
              </div>
              <div
                className="caret-down"
                data-toggle="signout-dropdown-toggler"
              >
                <i
                  className="fa fa-caret-down"
                  data-toggle="signout-dropdown-toggler"
                />
                <div
                  className="signout-dropdown-parent"
                >
                  <div
                    className="signout-dropdown"
                  >
                    <button
                      className="logout-button"
                      onClick={[Function]}
                      type="button"
                    >
                      <i
                        className="fa fa-sign-out-alt"
                      />
                      <span>
                        Sign Out
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>,
          ],
          "className": "pills",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                replace={false}
                to="/dashboard"
              >
                Dashboard
              </Link>,
              "className": "nav-links ",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Dashboard",
                "replace": false,
                "to": "/dashboard",
              },
              "ref": null,
              "rendered": "Dashboard",
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                replace={false}
                to="/"
              >
                Automations
              </Link>,
              "className": "nav-links ",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Automations",
                "replace": false,
                "to": "/",
              },
              "ref": null,
              "rendered": "Automations",
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="current-user"
                  data-toggle="signout-dropdown-toggler"
                >
                  <div
                    className="user-name"
                    data-initials="DM"
                    data-name="David Muhanguzi"
                    data-toggle="signout-dropdown-toggler"
                  />
                  <div
                    className="image-container"
                    data-toggle="signout-dropdown-toggler"
                  >
                    <img
                      alt="user-icon"
                      className="user-image"
                      data-toggle="signout-dropdown-toggler"
                      src="https://test-image.jpg"
                    />
                  </div>
                </div>,
                <div
                  className="caret-down"
                  data-toggle="signout-dropdown-toggler"
                >
                  <i
                    className="fa fa-caret-down"
                    data-toggle="signout-dropdown-toggler"
                  />
                  <div
                    className="signout-dropdown-parent"
                  >
                    <div
                      className="signout-dropdown"
                    >
                      <button
                        className="logout-button"
                        onClick={[Function]}
                        type="button"
                      >
                        <i
                          className="fa fa-sign-out-alt"
                        />
                        <span>
                          Sign Out
                        </span>
                      </button>
                    </div>
                  </div>
                </div>,
              ],
              "className": "user-info-container",
              "data-toggle": "signout-dropdown-toggler",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <div
                      className="user-name"
                      data-initials="DM"
                      data-name="David Muhanguzi"
                      data-toggle="signout-dropdown-toggler"
                    />,
                    <div
                      className="image-container"
                      data-toggle="signout-dropdown-toggler"
                    >
                      <img
                        alt="user-icon"
                        className="user-image"
                        data-toggle="signout-dropdown-toggler"
                        src="https://test-image.jpg"
                      />
                    </div>,
                  ],
                  "className": "current-user",
                  "data-toggle": "signout-dropdown-toggler",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "user-name",
                      "data-initials": "DM",
                      "data-name": "David Muhanguzi",
                      "data-toggle": "signout-dropdown-toggler",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <img
                        alt="user-icon"
                        className="user-image"
                        data-toggle="signout-dropdown-toggler"
                        src="https://test-image.jpg"
                      />,
                      "className": "image-container",
                      "data-toggle": "signout-dropdown-toggler",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "alt": "user-icon",
                        "className": "user-image",
                        "data-toggle": "signout-dropdown-toggler",
                        "src": "https://test-image.jpg",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "img",
                    },
                    "type": "div",
                  },
                ],
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <i
                      className="fa fa-caret-down"
                      data-toggle="signout-dropdown-toggler"
                    />,
                    <div
                      className="signout-dropdown-parent"
                    >
                      <div
                        className="signout-dropdown"
                      >
                        <button
                          className="logout-button"
                          onClick={[Function]}
                          type="button"
                        >
                          <i
                            className="fa fa-sign-out-alt"
                          />
                          <span>
                            Sign Out
                          </span>
                        </button>
                      </div>
                    </div>,
                  ],
                  "className": "caret-down",
                  "data-toggle": "signout-dropdown-toggler",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "fa fa-caret-down",
                      "data-toggle": "signout-dropdown-toggler",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "i",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <div
                        className="signout-dropdown"
                      >
                        <button
                          className="logout-button"
                          onClick={[Function]}
                          type="button"
                        >
                          <i
                            className="fa fa-sign-out-alt"
                          />
                          <span>
                            Sign Out
                          </span>
                        </button>
                      </div>,
                      "className": "signout-dropdown-parent",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <button
                          className="logout-button"
                          onClick={[Function]}
                          type="button"
                        >
                          <i
                            className="fa fa-sign-out-alt"
                          />
                          <span>
                            Sign Out
                          </span>
                        </button>,
                        "className": "signout-dropdown",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            <i
                              className="fa fa-sign-out-alt"
                            />,
                            <span>
                              Sign Out
                            </span>,
                          ],
                          "className": "logout-button",
                          "onClick": [Function],
                          "type": "button",
                        },
                        "ref": null,
                        "rendered": Array [
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "className": "fa fa-sign-out-alt",
                            },
                            "ref": null,
                            "rendered": null,
                            "type": "i",
                          },
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "Sign Out",
                            },
                            "ref": null,
                            "rendered": "Sign Out",
                            "type": "span",
                          },
                        ],
                        "type": "button",
                      },
                      "type": "div",
                    },
                    "type": "div",
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="brand"
          >
            <Link
              replace={false}
              to="/"
            >
              <div
                className="header-logo"
              >
                <img
                  alt="Andela Logo"
                  src="/logo.png"
                />
              </div>
              <span
                className="text"
              >
                ESA
              </span>
            </Link>
          </div>,
          <div
            className="pills"
          >
            <div
              className="nav-links "
            >
              <Link
                replace={false}
                to="/dashboard"
              >
                Dashboard
              </Link>
            </div>
            <div
              className="nav-links "
            >
              <Link
                replace={false}
                to="/"
              >
                Automations
              </Link>
            </div>
            <div
              className="user-info-container"
              data-toggle="signout-dropdown-toggler"
              onClick={[Function]}
            >
              <div
                className="current-user"
                data-toggle="signout-dropdown-toggler"
              >
                <div
                  className="user-name"
                  data-initials="DM"
                  data-name="David Muhanguzi"
                  data-toggle="signout-dropdown-toggler"
                />
                <div
                  className="image-container"
                  data-toggle="signout-dropdown-toggler"
                >
                  <img
                    alt="user-icon"
                    className="user-image"
                    data-toggle="signout-dropdown-toggler"
                    src="https://test-image.jpg"
                  />
                </div>
              </div>
              <div
                className="caret-down"
                data-toggle="signout-dropdown-toggler"
              >
                <i
                  className="fa fa-caret-down"
                  data-toggle="signout-dropdown-toggler"
                />
                <div
                  className="signout-dropdown-parent"
                >
                  <div
                    className="signout-dropdown"
                  >
                    <button
                      className="logout-button"
                      onClick={[Function]}
                      type="button"
                    >
                      <i
                        className="fa fa-sign-out-alt"
                      />
                      <span>
                        Sign Out
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>,
        ],
        "id": "header",
      },
      "ref": [Function],
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Link
              replace={false}
              to="/"
            >
              <div
                className="header-logo"
              >
                <img
                  alt="Andela Logo"
                  src="/logo.png"
                />
              </div>
              <span
                className="text"
              >
                ESA
              </span>
            </Link>,
            "className": "brand",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <div
                  className="header-logo"
                >
                  <img
                    alt="Andela Logo"
                    src="/logo.png"
                  />
                </div>,
                <span
                  className="text"
                >
                  ESA
                </span>,
              ],
              "replace": false,
              "to": "/",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <img
                    alt="Andela Logo"
                    src="/logo.png"
                  />,
                  "className": "header-logo",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "alt": "Andela Logo",
                    "src": "/logo.png",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "img",
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "ESA",
                  "className": "text",
                },
                "ref": null,
                "rendered": "ESA",
                "type": "span",
              },
            ],
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="nav-links "
              >
                <Link
                  replace={false}
                  to="/dashboard"
                >
                  Dashboard
                </Link>
              </div>,
              <div
                className="nav-links "
              >
                <Link
                  replace={false}
                  to="/"
                >
                  Automations
                </Link>
              </div>,
              <div
                className="user-info-container"
                data-toggle="signout-dropdown-toggler"
                onClick={[Function]}
              >
                <div
                  className="current-user"
                  data-toggle="signout-dropdown-toggler"
                >
                  <div
                    className="user-name"
                    data-initials="DM"
                    data-name="David Muhanguzi"
                    data-toggle="signout-dropdown-toggler"
                  />
                  <div
                    className="image-container"
                    data-toggle="signout-dropdown-toggler"
                  >
                    <img
                      alt="user-icon"
                      className="user-image"
                      data-toggle="signout-dropdown-toggler"
                      src="https://test-image.jpg"
                    />
                  </div>
                </div>
                <div
                  className="caret-down"
                  data-toggle="signout-dropdown-toggler"
                >
                  <i
                    className="fa fa-caret-down"
                    data-toggle="signout-dropdown-toggler"
                  />
                  <div
                    className="signout-dropdown-parent"
                  >
                    <div
                      className="signout-dropdown"
                    >
                      <button
                        className="logout-button"
                        onClick={[Function]}
                        type="button"
                      >
                        <i
                          className="fa fa-sign-out-alt"
                        />
                        <span>
                          Sign Out
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>,
            ],
            "className": "pills",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  replace={false}
                  to="/dashboard"
                >
                  Dashboard
                </Link>,
                "className": "nav-links ",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Dashboard",
                  "replace": false,
                  "to": "/dashboard",
                },
                "ref": null,
                "rendered": "Dashboard",
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  replace={false}
                  to="/"
                >
                  Automations
                </Link>,
                "className": "nav-links ",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Automations",
                  "replace": false,
                  "to": "/",
                },
                "ref": null,
                "rendered": "Automations",
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <div
                    className="current-user"
                    data-toggle="signout-dropdown-toggler"
                  >
                    <div
                      className="user-name"
                      data-initials="DM"
                      data-name="David Muhanguzi"
                      data-toggle="signout-dropdown-toggler"
                    />
                    <div
                      className="image-container"
                      data-toggle="signout-dropdown-toggler"
                    >
                      <img
                        alt="user-icon"
                        className="user-image"
                        data-toggle="signout-dropdown-toggler"
                        src="https://test-image.jpg"
                      />
                    </div>
                  </div>,
                  <div
                    className="caret-down"
                    data-toggle="signout-dropdown-toggler"
                  >
                    <i
                      className="fa fa-caret-down"
                      data-toggle="signout-dropdown-toggler"
                    />
                    <div
                      className="signout-dropdown-parent"
                    >
                      <div
                        className="signout-dropdown"
                      >
                        <button
                          className="logout-button"
                          onClick={[Function]}
                          type="button"
                        >
                          <i
                            className="fa fa-sign-out-alt"
                          />
                          <span>
                            Sign Out
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>,
                ],
                "className": "user-info-container",
                "data-toggle": "signout-dropdown-toggler",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <div
                        className="user-name"
                        data-initials="DM"
                        data-name="David Muhanguzi"
                        data-toggle="signout-dropdown-toggler"
                      />,
                      <div
                        className="image-container"
                        data-toggle="signout-dropdown-toggler"
                      >
                        <img
                          alt="user-icon"
                          className="user-image"
                          data-toggle="signout-dropdown-toggler"
                          src="https://test-image.jpg"
                        />
                      </div>,
                    ],
                    "className": "current-user",
                    "data-toggle": "signout-dropdown-toggler",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "user-name",
                        "data-initials": "DM",
                        "data-name": "David Muhanguzi",
                        "data-toggle": "signout-dropdown-toggler",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "div",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <img
                          alt="user-icon"
                          className="user-image"
                          data-toggle="signout-dropdown-toggler"
                          src="https://test-image.jpg"
                        />,
                        "className": "image-container",
                        "data-toggle": "signout-dropdown-toggler",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "alt": "user-icon",
                          "className": "user-image",
                          "data-toggle": "signout-dropdown-toggler",
                          "src": "https://test-image.jpg",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "img",
                      },
                      "type": "div",
                    },
                  ],
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <i
                        className="fa fa-caret-down"
                        data-toggle="signout-dropdown-toggler"
                      />,
                      <div
                        className="signout-dropdown-parent"
                      >
                        <div
                          className="signout-dropdown"
                        >
                          <button
                            className="logout-button"
                            onClick={[Function]}
                            type="button"
                          >
                            <i
                              className="fa fa-sign-out-alt"
                            />
                            <span>
                              Sign Out
                            </span>
                          </button>
                        </div>
                      </div>,
                    ],
                    "className": "caret-down",
                    "data-toggle": "signout-dropdown-toggler",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "fa fa-caret-down",
                        "data-toggle": "signout-dropdown-toggler",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "i",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <div
                          className="signout-dropdown"
                        >
                          <button
                            className="logout-button"
                            onClick={[Function]}
                            type="button"
                          >
                            <i
                              className="fa fa-sign-out-alt"
                            />
                            <span>
                              Sign Out
                            </span>
                          </button>
                        </div>,
                        "className": "signout-dropdown-parent",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": <button
                            className="logout-button"
                            onClick={[Function]}
                            type="button"
                          >
                            <i
                              className="fa fa-sign-out-alt"
                            />
                            <span>
                              Sign Out
                            </span>
                          </button>,
                          "className": "signout-dropdown",
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": Array [
                              <i
                                className="fa fa-sign-out-alt"
                              />,
                              <span>
                                Sign Out
                              </span>,
                            ],
                            "className": "logout-button",
                            "onClick": [Function],
                            "type": "button",
                          },
                          "ref": null,
                          "rendered": Array [
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "className": "fa fa-sign-out-alt",
                              },
                              "ref": null,
                              "rendered": null,
                              "type": "i",
                            },
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "children": "Sign Out",
                              },
                              "ref": null,
                              "rendered": "Sign Out",
                              "type": "span",
                            },
                          ],
                          "type": "button",
                        },
                        "type": "div",
                      },
                      "type": "div",
                    },
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`should render as expected 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    activeTab="active"
    currentUser={
      Object {
        "UserInfo": Object {
          "firstName": "David",
          "lastName": "Muhanguzi",
          "picture": "https://test-image.jpg",
        },
      }
    }
    history={
      Object {
        "push": [MockFunction],
      }
    }
    removeCurrentUser={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="brand"
        >
          <Link
            replace={false}
            to="/"
          >
            <div
              className="header-logo"
            >
              <img
                alt="Andela Logo"
                src="/logo.png"
              />
            </div>
            <span
              className="text"
            >
              ESA
            </span>
          </Link>
        </div>,
        <div
          className="pills"
        >
          <div
            className="nav-links "
          >
            <Link
              replace={false}
              to="/dashboard"
            >
              Dashboard
            </Link>
          </div>
          <div
            className="nav-links "
          >
            <Link
              replace={false}
              to="/"
            >
              Automations
            </Link>
          </div>
          <div
            className="user-info-container"
            data-toggle="signout-dropdown-toggler"
            onClick={[Function]}
          >
            <div
              className="current-user"
              data-toggle="signout-dropdown-toggler"
            >
              <div
                className="user-name"
                data-initials="DM"
                data-name="David Muhanguzi"
                data-toggle="signout-dropdown-toggler"
              />
              <div
                className="image-container"
                data-toggle="signout-dropdown-toggler"
              >
                <img
                  alt="user-icon"
                  className="user-image"
                  data-toggle="signout-dropdown-toggler"
                  src="https://test-image.jpg"
                />
              </div>
            </div>
            <div
              className="caret-down"
              data-toggle="signout-dropdown-toggler"
            >
              <i
                className="fa fa-caret-down"
                data-toggle="signout-dropdown-toggler"
              />
              <div
                className="signout-dropdown-parent"
              >
                <div
                  className="signout-dropdown"
                >
                  <button
                    className="logout-button"
                    onClick={[Function]}
                    type="button"
                  >
                    <i
                      className="fa fa-sign-out-alt"
                    />
                    <span>
                      Sign Out
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>,
      ],
      "id": "header",
    },
    "ref": [Function],
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Link
            replace={false}
            to="/"
          >
            <div
              className="header-logo"
            >
              <img
                alt="Andela Logo"
                src="/logo.png"
              />
            </div>
            <span
              className="text"
            >
              ESA
            </span>
          </Link>,
          "className": "brand",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <div
                className="header-logo"
              >
                <img
                  alt="Andela Logo"
                  src="/logo.png"
                />
              </div>,
              <span
                className="text"
              >
                ESA
              </span>,
            ],
            "replace": false,
            "to": "/",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <img
                  alt="Andela Logo"
                  src="/logo.png"
                />,
                "className": "header-logo",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "alt": "Andela Logo",
                  "src": "/logo.png",
                },
                "ref": null,
                "rendered": null,
                "type": "img",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "ESA",
                "className": "text",
              },
              "ref": null,
              "rendered": "ESA",
              "type": "span",
            },
          ],
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="nav-links "
            >
              <Link
                replace={false}
                to="/dashboard"
              >
                Dashboard
              </Link>
            </div>,
            <div
              className="nav-links "
            >
              <Link
                replace={false}
                to="/"
              >
                Automations
              </Link>
            </div>,
            <div
              className="user-info-container"
              data-toggle="signout-dropdown-toggler"
              onClick={[Function]}
            >
              <div
                className="current-user"
                data-toggle="signout-dropdown-toggler"
              >
                <div
                  className="user-name"
                  data-initials="DM"
                  data-name="David Muhanguzi"
                  data-toggle="signout-dropdown-toggler"
                />
                <div
                  className="image-container"
                  data-toggle="signout-dropdown-toggler"
                >
                  <img
                    alt="user-icon"
                    className="user-image"
                    data-toggle="signout-dropdown-toggler"
                    src="https://test-image.jpg"
                  />
                </div>
              </div>
              <div
                className="caret-down"
                data-toggle="signout-dropdown-toggler"
              >
                <i
                  className="fa fa-caret-down"
                  data-toggle="signout-dropdown-toggler"
                />
                <div
                  className="signout-dropdown-parent"
                >
                  <div
                    className="signout-dropdown"
                  >
                    <button
                      className="logout-button"
                      onClick={[Function]}
                      type="button"
                    >
                      <i
                        className="fa fa-sign-out-alt"
                      />
                      <span>
                        Sign Out
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>,
          ],
          "className": "pills",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                replace={false}
                to="/dashboard"
              >
                Dashboard
              </Link>,
              "className": "nav-links ",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Dashboard",
                "replace": false,
                "to": "/dashboard",
              },
              "ref": null,
              "rendered": "Dashboard",
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Link
                replace={false}
                to="/"
              >
                Automations
              </Link>,
              "className": "nav-links ",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Automations",
                "replace": false,
                "to": "/",
              },
              "ref": null,
              "rendered": "Automations",
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="current-user"
                  data-toggle="signout-dropdown-toggler"
                >
                  <div
                    className="user-name"
                    data-initials="DM"
                    data-name="David Muhanguzi"
                    data-toggle="signout-dropdown-toggler"
                  />
                  <div
                    className="image-container"
                    data-toggle="signout-dropdown-toggler"
                  >
                    <img
                      alt="user-icon"
                      className="user-image"
                      data-toggle="signout-dropdown-toggler"
                      src="https://test-image.jpg"
                    />
                  </div>
                </div>,
                <div
                  className="caret-down"
                  data-toggle="signout-dropdown-toggler"
                >
                  <i
                    className="fa fa-caret-down"
                    data-toggle="signout-dropdown-toggler"
                  />
                  <div
                    className="signout-dropdown-parent"
                  >
                    <div
                      className="signout-dropdown"
                    >
                      <button
                        className="logout-button"
                        onClick={[Function]}
                        type="button"
                      >
                        <i
                          className="fa fa-sign-out-alt"
                        />
                        <span>
                          Sign Out
                        </span>
                      </button>
                    </div>
                  </div>
                </div>,
              ],
              "className": "user-info-container",
              "data-toggle": "signout-dropdown-toggler",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <div
                      className="user-name"
                      data-initials="DM"
                      data-name="David Muhanguzi"
                      data-toggle="signout-dropdown-toggler"
                    />,
                    <div
                      className="image-container"
                      data-toggle="signout-dropdown-toggler"
                    >
                      <img
                        alt="user-icon"
                        className="user-image"
                        data-toggle="signout-dropdown-toggler"
                        src="https://test-image.jpg"
                      />
                    </div>,
                  ],
                  "className": "current-user",
                  "data-toggle": "signout-dropdown-toggler",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "user-name",
                      "data-initials": "DM",
                      "data-name": "David Muhanguzi",
                      "data-toggle": "signout-dropdown-toggler",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <img
                        alt="user-icon"
                        className="user-image"
                        data-toggle="signout-dropdown-toggler"
                        src="https://test-image.jpg"
                      />,
                      "className": "image-container",
                      "data-toggle": "signout-dropdown-toggler",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "alt": "user-icon",
                        "className": "user-image",
                        "data-toggle": "signout-dropdown-toggler",
                        "src": "https://test-image.jpg",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "img",
                    },
                    "type": "div",
                  },
                ],
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <i
                      className="fa fa-caret-down"
                      data-toggle="signout-dropdown-toggler"
                    />,
                    <div
                      className="signout-dropdown-parent"
                    >
                      <div
                        className="signout-dropdown"
                      >
                        <button
                          className="logout-button"
                          onClick={[Function]}
                          type="button"
                        >
                          <i
                            className="fa fa-sign-out-alt"
                          />
                          <span>
                            Sign Out
                          </span>
                        </button>
                      </div>
                    </div>,
                  ],
                  "className": "caret-down",
                  "data-toggle": "signout-dropdown-toggler",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "fa fa-caret-down",
                      "data-toggle": "signout-dropdown-toggler",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "i",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <div
                        className="signout-dropdown"
                      >
                        <button
                          className="logout-button"
                          onClick={[Function]}
                          type="button"
                        >
                          <i
                            className="fa fa-sign-out-alt"
                          />
                          <span>
                            Sign Out
                          </span>
                        </button>
                      </div>,
                      "className": "signout-dropdown-parent",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <button
                          className="logout-button"
                          onClick={[Function]}
                          type="button"
                        >
                          <i
                            className="fa fa-sign-out-alt"
                          />
                          <span>
                            Sign Out
                          </span>
                        </button>,
                        "className": "signout-dropdown",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            <i
                              className="fa fa-sign-out-alt"
                            />,
                            <span>
                              Sign Out
                            </span>,
                          ],
                          "className": "logout-button",
                          "onClick": [Function],
                          "type": "button",
                        },
                        "ref": null,
                        "rendered": Array [
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "className": "fa fa-sign-out-alt",
                            },
                            "ref": null,
                            "rendered": null,
                            "type": "i",
                          },
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "Sign Out",
                            },
                            "ref": null,
                            "rendered": "Sign Out",
                            "type": "span",
                          },
                        ],
                        "type": "button",
                      },
                      "type": "div",
                    },
                    "type": "div",
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="brand"
          >
            <Link
              replace={false}
              to="/"
            >
              <div
                className="header-logo"
              >
                <img
                  alt="Andela Logo"
                  src="/logo.png"
                />
              </div>
              <span
                className="text"
              >
                ESA
              </span>
            </Link>
          </div>,
          <div
            className="pills"
          >
            <div
              className="nav-links "
            >
              <Link
                replace={false}
                to="/dashboard"
              >
                Dashboard
              </Link>
            </div>
            <div
              className="nav-links "
            >
              <Link
                replace={false}
                to="/"
              >
                Automations
              </Link>
            </div>
            <div
              className="user-info-container"
              data-toggle="signout-dropdown-toggler"
              onClick={[Function]}
            >
              <div
                className="current-user"
                data-toggle="signout-dropdown-toggler"
              >
                <div
                  className="user-name"
                  data-initials="DM"
                  data-name="David Muhanguzi"
                  data-toggle="signout-dropdown-toggler"
                />
                <div
                  className="image-container"
                  data-toggle="signout-dropdown-toggler"
                >
                  <img
                    alt="user-icon"
                    className="user-image"
                    data-toggle="signout-dropdown-toggler"
                    src="https://test-image.jpg"
                  />
                </div>
              </div>
              <div
                className="caret-down"
                data-toggle="signout-dropdown-toggler"
              >
                <i
                  className="fa fa-caret-down"
                  data-toggle="signout-dropdown-toggler"
                />
                <div
                  className="signout-dropdown-parent"
                >
                  <div
                    className="signout-dropdown"
                  >
                    <button
                      className="logout-button"
                      onClick={[Function]}
                      type="button"
                    >
                      <i
                        className="fa fa-sign-out-alt"
                      />
                      <span>
                        Sign Out
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>,
        ],
        "id": "header",
      },
      "ref": [Function],
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Link
              replace={false}
              to="/"
            >
              <div
                className="header-logo"
              >
                <img
                  alt="Andela Logo"
                  src="/logo.png"
                />
              </div>
              <span
                className="text"
              >
                ESA
              </span>
            </Link>,
            "className": "brand",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <div
                  className="header-logo"
                >
                  <img
                    alt="Andela Logo"
                    src="/logo.png"
                  />
                </div>,
                <span
                  className="text"
                >
                  ESA
                </span>,
              ],
              "replace": false,
              "to": "/",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <img
                    alt="Andela Logo"
                    src="/logo.png"
                  />,
                  "className": "header-logo",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "alt": "Andela Logo",
                    "src": "/logo.png",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "img",
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "ESA",
                  "className": "text",
                },
                "ref": null,
                "rendered": "ESA",
                "type": "span",
              },
            ],
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="nav-links "
              >
                <Link
                  replace={false}
                  to="/dashboard"
                >
                  Dashboard
                </Link>
              </div>,
              <div
                className="nav-links "
              >
                <Link
                  replace={false}
                  to="/"
                >
                  Automations
                </Link>
              </div>,
              <div
                className="user-info-container"
                data-toggle="signout-dropdown-toggler"
                onClick={[Function]}
              >
                <div
                  className="current-user"
                  data-toggle="signout-dropdown-toggler"
                >
                  <div
                    className="user-name"
                    data-initials="DM"
                    data-name="David Muhanguzi"
                    data-toggle="signout-dropdown-toggler"
                  />
                  <div
                    className="image-container"
                    data-toggle="signout-dropdown-toggler"
                  >
                    <img
                      alt="user-icon"
                      className="user-image"
                      data-toggle="signout-dropdown-toggler"
                      src="https://test-image.jpg"
                    />
                  </div>
                </div>
                <div
                  className="caret-down"
                  data-toggle="signout-dropdown-toggler"
                >
                  <i
                    className="fa fa-caret-down"
                    data-toggle="signout-dropdown-toggler"
                  />
                  <div
                    className="signout-dropdown-parent"
                  >
                    <div
                      className="signout-dropdown"
                    >
                      <button
                        className="logout-button"
                        onClick={[Function]}
                        type="button"
                      >
                        <i
                          className="fa fa-sign-out-alt"
                        />
                        <span>
                          Sign Out
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>,
            ],
            "className": "pills",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  replace={false}
                  to="/dashboard"
                >
                  Dashboard
                </Link>,
                "className": "nav-links ",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Dashboard",
                  "replace": false,
                  "to": "/dashboard",
                },
                "ref": null,
                "rendered": "Dashboard",
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Link
                  replace={false}
                  to="/"
                >
                  Automations
                </Link>,
                "className": "nav-links ",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Automations",
                  "replace": false,
                  "to": "/",
                },
                "ref": null,
                "rendered": "Automations",
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <div
                    className="current-user"
                    data-toggle="signout-dropdown-toggler"
                  >
                    <div
                      className="user-name"
                      data-initials="DM"
                      data-name="David Muhanguzi"
                      data-toggle="signout-dropdown-toggler"
                    />
                    <div
                      className="image-container"
                      data-toggle="signout-dropdown-toggler"
                    >
                      <img
                        alt="user-icon"
                        className="user-image"
                        data-toggle="signout-dropdown-toggler"
                        src="https://test-image.jpg"
                      />
                    </div>
                  </div>,
                  <div
                    className="caret-down"
                    data-toggle="signout-dropdown-toggler"
                  >
                    <i
                      className="fa fa-caret-down"
                      data-toggle="signout-dropdown-toggler"
                    />
                    <div
                      className="signout-dropdown-parent"
                    >
                      <div
                        className="signout-dropdown"
                      >
                        <button
                          className="logout-button"
                          onClick={[Function]}
                          type="button"
                        >
                          <i
                            className="fa fa-sign-out-alt"
                          />
                          <span>
                            Sign Out
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>,
                ],
                "className": "user-info-container",
                "data-toggle": "signout-dropdown-toggler",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <div
                        className="user-name"
                        data-initials="DM"
                        data-name="David Muhanguzi"
                        data-toggle="signout-dropdown-toggler"
                      />,
                      <div
                        className="image-container"
                        data-toggle="signout-dropdown-toggler"
                      >
                        <img
                          alt="user-icon"
                          className="user-image"
                          data-toggle="signout-dropdown-toggler"
                          src="https://test-image.jpg"
                        />
                      </div>,
                    ],
                    "className": "current-user",
                    "data-toggle": "signout-dropdown-toggler",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "user-name",
                        "data-initials": "DM",
                        "data-name": "David Muhanguzi",
                        "data-toggle": "signout-dropdown-toggler",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "div",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <img
                          alt="user-icon"
                          className="user-image"
                          data-toggle="signout-dropdown-toggler"
                          src="https://test-image.jpg"
                        />,
                        "className": "image-container",
                        "data-toggle": "signout-dropdown-toggler",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "alt": "user-icon",
                          "className": "user-image",
                          "data-toggle": "signout-dropdown-toggler",
                          "src": "https://test-image.jpg",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "img",
                      },
                      "type": "div",
                    },
                  ],
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <i
                        className="fa fa-caret-down"
                        data-toggle="signout-dropdown-toggler"
                      />,
                      <div
                        className="signout-dropdown-parent"
                      >
                        <div
                          className="signout-dropdown"
                        >
                          <button
                            className="logout-button"
                            onClick={[Function]}
                            type="button"
                          >
                            <i
                              className="fa fa-sign-out-alt"
                            />
                            <span>
                              Sign Out
                            </span>
                          </button>
                        </div>
                      </div>,
                    ],
                    "className": "caret-down",
                    "data-toggle": "signout-dropdown-toggler",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "fa fa-caret-down",
                        "data-toggle": "signout-dropdown-toggler",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "i",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <div
                          className="signout-dropdown"
                        >
                          <button
                            className="logout-button"
                            onClick={[Function]}
                            type="button"
                          >
                            <i
                              className="fa fa-sign-out-alt"
                            />
                            <span>
                              Sign Out
                            </span>
                          </button>
                        </div>,
                        "className": "signout-dropdown-parent",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": <button
                            className="logout-button"
                            onClick={[Function]}
                            type="button"
                          >
                            <i
                              className="fa fa-sign-out-alt"
                            />
                            <span>
                              Sign Out
                            </span>
                          </button>,
                          "className": "signout-dropdown",
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": Array [
                              <i
                                className="fa fa-sign-out-alt"
                              />,
                              <span>
                                Sign Out
                              </span>,
                            ],
                            "className": "logout-button",
                            "onClick": [Function],
                            "type": "button",
                          },
                          "ref": null,
                          "rendered": Array [
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "className": "fa fa-sign-out-alt",
                              },
                              "ref": null,
                              "rendered": null,
                              "type": "i",
                            },
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "children": "Sign Out",
                              },
                              "ref": null,
                              "rendered": "Sign Out",
                              "type": "span",
                            },
                          ],
                          "type": "button",
                        },
                        "type": "div",
                      },
                      "type": "div",
                    },
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
